adding client side javascript to load user threads, load thread messages, and send messages

--- a/client-side/css/reset.css
+++ b/client-side/css/reset.css
@@ -107,6 +107,10 @@ input{
 .repeat-xy{
     background-repeat: repeat;
 }
+/** position **/
+.relative{
+    position: relative;
+}
 /** wrapper **/
 .wrapper{
     width: 960px;
